--- a/source/_posts/为什么要从事交易这个前途未卜的行业.md
+++ b/source/_posts/为什么要从事交易这个前途未卜的行业.md
@@ -1,77 +1,76 @@
 ---
-title: 为什么要从事交易这个前途未卜的职业？
+title: Why trading as a career of uncertainty?
 date: 2023-07-27 18:25:00
 categories:
-  - 量化交易
-tags:
-  - 策略
-  - 走向成熟
-  - 量化交易
-  - 走出幻觉
-  - 不眠之夜
-  - 学生股民
-  - 趋势
-  - 金融帝国
-description: '我深信我说出来的东西， 初学者是不会理解的； 就算是理解也不会相信；就算是相信也不会去实施；就算是实施也不会坚持； 就算是坚持也绝对不可能在没有经历过惨重亏损以前， 就能心甘情愿的坚持到底！'
+  - Quantitative Trading
+tags: 
+  - Strategy
+  - Toward Maturity
+  - Quantitative Trading
+  - Out of Illusion
+  - Sleepless Nights
+  - Student Traders
+  - Trends
+  - Financial Empire
+description: I am convinced that what I am saying will not be understood by beginners; even if they understand it, they will not believe it; even if they believe it, they will not implement it; even if they implement it, they will not stick to it; and even if they do stick to it, they will not be able to stick to it willingly until they have experienced a heavy loss
 cover: https://s2.loli.net/2023/07/27/rX9Mc2E7PZSeaCm.png
 ---
+## Foreword
 
-## 前言
+I think this book "Out of Illusion, Into Maturity" by Financial Empire should be one of the required introductory readings for traders who do trend trading.
 
-我认为，做趋势交易的交易员，金融帝国的这本《走出幻觉，走向成熟》应该是必读的入门读物之一。
+I have recommended this book to many people, but most of them have only expressed their thanks politely, and never had one person excitedly say that this book has helped him a lot. Improved his trading philosophy. So I know that there are a lot of people in the world who lose money for a reason, and it's hard to change. But anyone who can read this book, can trigger their own independent thinking, so as to reconfigure their trading system, stick with it, has almost understood how trading is a matter of fact.
 
-也向很多人推荐过这本书，但是大多数人都只是礼节性的表示感谢，从未有一个人兴奋的说，这本书帮助了他很多。改进了他的交易理念。所以我知道，世界上有很多人亏钱是有原因的，也很难去改变。但凡能看过这本书，能够引发自己的独立思考，从而重构自己的交易体系的，坚持下去，就已经快明了交易是怎么一回事了。
+Of course, from a higher level, is to tell why do trend trading to go through a long and painful loss, has been honing the nature of the heart, until the frank acceptance of losses!
 
-当然，从更高一个层次来说，就是告诉为什么做趋势交易要经历漫长而且痛苦的亏损，一直磨练心性，直到坦然接受亏损为止！
+**Maybe you'll win, maybe you'll lose, but either way you'll lose a lot of what's most precious to you. ** - a line of dialog from the TV series "Sitting on the fence
+**To trade is to seek death, not to trade is to wait for death. ** - Financial Empire
 
-**也许你会赢，也许你会输，但无论如何你都会失去很多你最最宝贵的东西。**——电视剧《坐庄》中的一句对白
-**做交易是找死，不做交易是等死。**——金融帝国
+## Quantitative
 
-## 量化
+### The journey
 
-### 历程
+Along the way, from simply looking at indicators ==> using mechanical trading ==> using trading systems ==> encountered "out of the illusion Towards maturity" ==> reconstructing trading concepts ==> began to learn python, using quantitative trading. How many painful reflections and struggles along the way.
 
-一路走来，从单纯看指标 ==> 使用机械交易 ==> 使用交易系统 ==> 遇到《走出幻觉 走向成熟》==> 重构交易理念 ==> 开始学习python，使用量化交易。一路走来，经历了多少痛苦的反思和挣扎。
+In low-frequency quantitative trading, you can only choose, either a long loss and more profit, or a long profit and more loss, can only choose one. How do you choose? In other words, do you want the odds or the win rate?
 
-在低频量化交易中，你只能选择，要么长亏多赚，要么长赚多亏，只能选一样。你怎么选？换句话说，你是要赔率还是要胜率？
+In fact, if I meet a friend who speculates in stocks, I often ask it this question. What are your odds and your winning percentage? If you can answer, I basically think that you have already started. If you are stumped, or simply avoid talking about it, then I can only assume that it should still be at the stage of not getting started, no matter how old it is.
 
-其实，我如果遇到炒股的朋友，经常会问它这样一个问题。你的赔率和胜率是多少？ 能回答上来的，我基本上认为，已经入门。如果支支吾吾，或者干脆避而不谈，东拉西扯的，那么我只能认为它应该还是处于没入门的阶段，无论年纪多么大。
+### Odds or Wins?
 
-### 赔率还是胜率？
+As soon as you start learning quantitative trading, you will come across this question, do I pick a trend strategy or an oscillator strategy?
 
-只要开始学习量化交易，你就会遇到这个问题，我是选一个趋势策略，还是震荡策略？
+Trend strategy backtesting data all the way, all the way seems to be a small loss, on the basis of a few large profits pulled back, if these a few of your trading system did not catch, then it will inevitably be a loss.
 
-趋势策略回测数据一路看来，全部是一路小亏损，就靠几笔大的盈利拉回来了，如果这几笔你的交易系统没抓住，那么必然会出现亏损。
+Oscillating strategy, all the way seems to keep appearing profit, but the amount is not big, if the black swan in the trading period, then the whole account has the possibility of major losses.
 
-震荡策略，一路看来，不停的出现盈利，但是金额都不大，如果在交易的期间出现黑天鹅，那么整个账号都有出现重大亏损的可能性。
+Do you go for the thrill, or the profit?
 
-你是选快感，还是盈利？
+The book "Get Out" by Financial Empire mainly addresses the issue of overcoming the human mindset if it is harnessed with reason back in the day when there was no quantitative trading.
 
-金融帝国的《走出》这本书，主要解决的就是当年没有量化交易的情况下，如果用理智驾驭克服人类的心态的问题。
-
-好在现在有了量化交易。可以不再受这种残酷的心理折磨。
+Good thing there is quantitative trading now. Can no longer suffer from this cruel psychological torture.
 
 ![](https://s2.loli.net/2023/07/28/EpubXldyjmB45oN.jpg)
 
-## 原文摘录
+## Excerpts from the original
 
-下面摘录一段我非常喜欢的原文，应该很好的回答了这个问题。为何要从事交易。
+Here's an excerpt from the original article that I really like, which should answer the question nicely. Why trade.
 
-> 也许是经受的挫折太多了吧， 我真的从来没有劝过身边的人去做交易。就连最近很多同龄人让我教他们炒股票时，我也都是尽量地推托，并且和他们讲明炒股的弊端。因为我**深知一个交易者的成长是非常痛苦的。这需要和行业环境、自身本能、信仰体系等一切固有的东西对抗。我从来不相信有人能够在没有经历过惨重亏损后，就能真正的学会做交易**。事实上，初学者赚来的钱，通常都是市场借给你的， 等到市场讨账的时候会更加的凶狠。似乎这个世界上什么东西都能教，但唯独两件事情只能靠自己去感受。一个是恋爱，另一个就是做交易。你无法向一个儿童解释出恋爱的感觉，更无法教他恋爱的技巧。事实上，交易也是别无二致的。
+> Maybe it's because I've had so much frustration, I've really never advised anyone around me to go into trading. Even when many of my peers have recently asked me to teach them to trade stocks, I've tried my best to push back and explain to them the downsides of trading. Because I **know** that the growth of a trader is very painful. It involves fighting against the industry environment, your own instincts, your belief system, and everything else that is inherent in it. I have never believed that anyone can truly learn to trade without experiencing heavy losses**. The truth is, beginners usually make money that the market lends you, and they wait for the market to get even more aggressive when it comes time to collect. It seems that everything in this world can be taught, but only two things can only be felt by yourself. One is falling in love, and the other is making deals. You can't explain to a child what it feels like to be in love, much less teach him the art of being in love. In fact, trading is no different.
 >
-> 　　我深信我说出来的东西， **初学者是不会理解的； 就算是理解也不会相信；就算是相信也不会去实施；就算是实施也不会坚持； 就算是坚持也绝对不可能在没有经历过惨重亏损以前， 就能心甘情愿的坚持到底**！ 事实上， 交易真的并不复杂，相反却是出奇的简单。问题是这种简单有些出乎常理，并且不符合正常人的本能和信仰体系。本书全部的内容都能浓缩为几句话， 并且我保证这些话大家肯定都听说过。其实本书的全部价值就是让大家能够相信这些简单的道理。
+> I am convinced that what I have said, **beginners will not understand; even if they understand, they will not believe; even if they believe, they will not implement; even if they implement, they will not insist; even if they insist, they will not be able to willingly stick to the end without experiencing heavy losses before **! In fact, trading is really not complicated, on the contrary, it is surprisingly simple. The problem is that this simplicity is a bit out of the ordinary, and does not conform to normal human instincts and belief systems. The entire contents of this book can be condensed into a few sentences, and I guarantee you've heard them all before. In fact, the whole value of this book is to enable people to believe in these simple truths.
 >
-> 　　我在网上看到过一篇关于进入股市动机的调查。第一位的是获利； 第二位的是证实能力； 第三位的是追求自由。回想一下，我当初也确实是因为这些才进入股票市场的。但具有讽刺意义的是，我首先是付出了高昂的学费； 然后是必须愚钝的坚持交易原则；最后的结果却是基本上靠天吃饭， 而决无自由与自豪可言。十年后的今天， 我不得不感叹，结局与初衷真的是事与愿违！ 我相信现在进入股市的这些同龄人，也许有一天你们真的能够赚到庞大的财富， 但你们肯定会感慨市场和你们当初想象的并不一样。
-> 　　当我回想起十多年来经历的一幕一幕： 那无数的不眠之夜；那种面对亏损绞尽脑汁也找不到出路的无奈；那种毁掉家长一辈子积蓄三分之二的心痛； 那种与本能较量的痛苦挣扎； 那种为了交易而离群的孤独… … ， 现在心里还是酸酸的。说实话，我真的不忍心看着身边的同龄人再经历，我曾经那种痛苦的折磨， 要知道他们还只不过是一些孩子。我更不忍心看着这些充满童真的可爱心灵， 变得千疮百孔后生出铁石一般的老茧。即使这样， 谁也不能保证这种付出必然能够有好的回报。
+> I read a survey on the internet about the motives for entering the stock market. The first was to make a profit, the second was to prove one's ability, and the third was to pursue freedom. Looking back, I did enter the stock market because of these reasons. Ironically, I first had to pay high tuition fees; then I had to be foolish enough to stick to my trading principles; and in the end, I ended up basically living off the land, with no freedom or pride. Today, ten years later, I have to sigh, the end and the original intention is really the opposite of what I had hoped for! I believe that those of my peers who are now in the stock market may one day be able to make a huge fortune, but you will certainly feel that the market is not the same as you first imagined.
+> When I think back to more than a decade of experience a scene a scene: that countless sleepless nights; that the face of losses racked their brains can not find a way out of the helpless; that destroyed two-thirds of a parent's lifelong savings of heartache; that the pain of the struggle with instincts; that in order to trade and the loneliness of the group ... ... , now the heart is still sour. To be honest, I really can't bear to see my peers around me go through the same kind of pain I once went through, knowing that they are still just some children. I can't bear to see these lovely hearts, full of childlike innocence, become full of holes and then develop calluses like iron stones. Even so, there is no guarantee that this kind of dedication will be rewarded.
 >
-> 　　最近的一些事情让我的观点有所转变。我发现身边的很多同龄人也都情绪低落而充满压力。房价在飞涨，我们这些二十多岁正要告别童年的孩子真的是有很大的压力。他们也都在各自不同的行业努力为钱而拼搏， 也许任何行业都不可能一帆风顺吧。有一位心理学家说过， 大众通常都会觉得自己付出的心血比其他人更多， 毕竟只有自己更能感受到自己的付出。以前是“ 人无外财不富” ，也许现在是“ 人无外财难活” 。毕竟没有什么行业能够像交易这样有如此低的进入门槛，又有如此惊人的短期回报。
+> Recently, something has changed my perspective. I realized that many of my peers are also depressed and full of stress. Housing prices are skyrocketing, and those of us in our twenties who are about to say goodbye to childhood are really under a lot of pressure. They are all struggling for money in their different industries, and maybe it's not all smooth sailing in any industry. A psychologist once said that people usually feel that they have put in more effort than others, after all, only they can feel their own effort. It used to be "you can't get rich without money", but maybe now it's "you can't live without money". After all, there is no industry that has such a low barrier to entry and such amazing short-term returns as trading.
 
-> 我突然想起我14 岁时一件有意思的事情。那时虽然我的“大帐”还在亏损，但有一天我获利了两千多元的账面利润。那天正好开家长会，我记得还没有下课的时候，我老妈已经来到学校，在窗外开着我。那时我压抑不住内心的兴奋、快下课的时候我站起来对着窗外的老妈连比划、带说的告诉他：“涨了一块四呀！ ”现在想想真的很可笑，但我却记得很清楚。未来的几年内，我的亏损连十四万都打不住。这说明什么？那时我认为交易是一种不劳而获的事情，一天赚了大人几个月的工资，并且（当时认为）没有任何成本，我能不兴奋吗？这就是初学者对待盈利的真实心灵感受。
+> I suddenly remembered an interesting incident when I was 14 years old. At that time, although my "big account" was still losing money, but one day I made a profit of more than two thousand dollars in the book. It was a parent-teacher conference, and I remember my mom coming to the school before class was over and driving me out the window. At that time I could not suppress the excitement inside, almost the end of the class when I stood up to the window of my mom even gestures, with said told him: "up a piece of four ah! "Now think about it is really funny, but I remember it very clearly. In the next few years, I can't even beat a loss of 140,000 dollars. What does this mean? At the time I thought trading was a no-brainer, and could I not be excited about earning a few months of an adult's salary in one day and (as I thought at the time) at no cost? That's how a beginner's mind feels about profits.
 
-## 结尾
+## Ending
 
-好在现在有了**量化交易**，让我们可以站在更高的维度上面看待这一切。并且可以用机器代替我们做出违背人性的决定。
+The good thing is that there is now **quantitative trading** that allows us to look at it all from a higher dimension. And machines can be used to make decisions that go against human nature instead of us.
 
-这也是我在站台**量化交易**的原因，希望这个强有力的数学和工程工具，可以帮助处于迷茫的人们**走出幻觉，走向成熟**！
+That's why I'm on the stand **QUANTITATIVE TRADING**, hoping that this powerful mathematical and engineering tool can help people in a daze **out of disillusionment and towards maturity**!
 
 ![](https://s2.loli.net/2023/07/28/4pHqyEroSgVID3G.jpg)
