--- a/source/_posts/为什么要使用量化工具投资数字货币.md
+++ b/source/_posts/为什么要使用量化工具投资数字货币.md
@@ -1,81 +1,81 @@
 ---
-title: 为什么要使用量化工具投资数字货币
+title: Why use quantitative tools to invest in digital currencies
 date: 2023-09-06 16:07:00
-categories:
-  - 量化交易
-tags:
-  - 数字货币
-  - 股票
-  - 量化工具
-  - 狂飙
+categories: 
+  - Quantitative Trading
+tags: 
+  - Digital Currency
+  - Stocks
+  - Quantitative Instruments
+  - Rampage
   - digiccy
   - quant1098.com
   - trade
-  - 交易
-description: '量化交易跟数字货币在大多数国人的眼里都已经成为毒瘤。特别是这两个毒瘤还有结合在一起的能力，那简直是必须要除之而后快的'
+  - trade
+description: Quantitative trading and digital currencies have become a cancer in the eyes of most people. Especially when these two tumors have the ability to combine together, it is simply necessary to get rid of them.
 cover: https://s2.loli.net/2023/09/06/yBf2nsTpGWXdFCa.png
 ---
-## 引言
+## Introduction
 
-数字货币诞生于2008年 ，一场源于政府财政政策的大型社会实验已经变成了一种大类资产。虽然没有那几个国家承认他的货币属性，但是消灭数字货币已经变成不可能。在众多正直的人士的眼里，这是一个荒唐的骗局，但是在众多翻身无望的中下层人士，却认为他是唯一的发财可能。
+Born in 2008, digital currency, a large-scale social experiment that originated in government fiscal policy, has become a major asset class. Although no country recognizes its monetary properties, the elimination of digital currencies has become impossible. In the eyes of many decent people, it is an absurd scam, but in the eyes of many middle and lower class people, who have no hope of getting rich, it is the only possibility to get rich.
 
-这种奇怪的矛盾统一结合在一个事物上，不能不说是一个诡异的结合。
+This strange unity of contradictions combined in one thing cannot but be a bizarre combination.
 
-不可忽视的事实是10年前的2013年 比特币仅仅1000人民币，但是到了今天 哪怕已经经历的暴跌，依然在20万人民币左右。10年1000倍的涨幅已经跑赢了绝大多数的资产涨幅。
+The fact is that 10 years ago in 2013, bitcoin was worth just 1,000 RMB, but today, even after the crash, it's still worth around 200,000 RMB. 1,000-fold increase in 10 years has outperformed the rate of increase of most other assets.
 
-反观中国股市 万年不变的3000点，已经埋掉了一批又一批的散户股民。假设你10年前有400万， 经过10年炒股票有了500万（如果你能做到，相信你已经超越了绝大多数股民），但是你的购买力一定是缩水的。
+In contrast, China's stock market, which has remained constant at 3,000 points for years, has buried a number of retail shareholders. Suppose you had 4 million 10 years ago, after 10 years of speculation stocks have 5 million (if you can do, I believe you have surpassed the vast majority of stockholders), but your purchasing power must be shrinking.
 
-这就是残酷的中国股市。
+This is the cruel Chinese stock market.
 
-作为一个中国股民， 面临的问题太多了,3000点10年不变已经是股民永远的痛，股民还在T+1的时候 机构却可以T+0，我不知道那个市场可以赤果果的不保护甚至是压榨投资市场里面的散户投资者。今年来的种种利好政策，更像是老乡别跑的翻版。
+As a Chinese stockholder, facing too many problems, 3000 points for 10 years has been the pain of the stockholders forever, the stockholders are still T + 1 when the institutions can be T + 0, I do not know that the market can be barefaced not to protect or even squeeze the investment market inside the retail investor. This year, all kinds of favorable policies, more like a replica of the old folks don't run.
 
-现在 量化投资各种工具更加下放到尝鲜的炒股散户，这一样就导致那些传统看基本面 看k线的散户在这个市场，根本就是不公平的。他们面临的简直就是赤裸裸的屠杀！
+Now quantitative investment tools more down to the taste of stock speculation retail investors, which leads to those who traditionally look at the fundamentals look at the k line of the retail investors in this market, simply is not fair. They are facing a naked massacre!
 
-某位大神曾经说过： **与其花时间提高牌技,我更愿意寻找对手更弱的牌局**， 我们为什么要在那些千年的老狐狸里面赚取那刀口舔血的利润，而不去找到那些菜鸡参与的牌局呢？
+A god once said: ** Instead of spending time to improve poker skills, I prefer to find the opponent weaker poker game ** Why do we want to earn that knife mouth lick blood profit in those thousand years old fox, and not to find those rookies to participate in the poker game it?
 
-## 量化投资的优势
+## Advantages of Quantitative Investing
 
-量化交易从去年的默默无闻到现在的污名化，成了股市下跌的替罪羊，为啥？还不是量化交易挣钱太多了。
+Quantitative trading from last year's obscurity to the present stigmatization, become the stock market fall scapegoat, why? It's not that quantitative trading makes too much money.
 
-量化交易借助计算机的强大能力，找到人肉眼看不到的机会。从而超越了大多数散户凭借肉眼交易获得的收益，并且机器冷冰冰的执行代码，既没有贪婪 也没有恐惧种种情绪对交易行为的制约。获取更高的收益就成为一件自然而然的事情了。
+Quantitative trading uses the power of computers to find opportunities that are invisible to the human eye. Thus exceeding the majority of retail traders with the naked eye trading gains, and the machine cold implementation of the code, neither greed nor fear of all kinds of emotional constraints on trading behavior. Getting higher returns is a natural thing to do.
 
-## 数字货币市场的特点
+## Characteristics of the digital currency market
 
-数字货币的高波动高收益 高风险已经超过了大多数的交易市场。luna的空投让很多人一夜暴富，同时luna一夜暴跌99.95%， 让更多人目瞪口呆。这一切跟股票市场的T+0是多么不同，你不必担心别人可以可以T +0而你只能T+1。
+The high volatility, high returns, and high risks of digital currencies have surpassed most trading markets. luna's airdrops have made many people rich overnight, while luna's overnight plunge of 99.95% has left many more people dumbfounded. This is so different from T+0 in the stock market, you don't have to worry about others being able to T+0 while you can only T+1.
 
-数据在链上无法作假，针对散户，没有比这个更加友好的市场了。
+The data can't be faked on the chain, and there's no friendlier market for retail investors.
 
-关于国内是否违法我多说一句，具体的结论是并不违法，但是这个市场是一个黑暗森林。诈骗犯与投机客混迹其中，再加上数字货币本身天然反监管。坚持代码即法律的理念，必然与政府的管制思维不能同步。但是，从中国政府层面也是坚持数字货币是一种特殊的商品，也没有完全封杀，它封杀的是不正规的资金盘和宣传数字货币能挣大钱，来对没有认知能力的人群进行诈骗的行为。
+I'll say one more thing about whether it's illegal domestically, the specific conclusion is that it's not, but this market is a dark forest. Scammers and speculators mix in, plus digital currencies themselves are naturally anti-regulatory. Insisting on the idea that code is law is bound to be out of sync with the government's regulatory mindset. However, from the level of the Chinese government is also insisting that digital currency is a special kind of commodity, and not completely blocked, it blocked the irregular capital plate and propaganda of digital currency can make a lot of money, to fraud on the people who do not have the cognitive ability.
 
-如果觉得这个很难理解，你可以想象一下80年代摆摊做小买卖的商人，一些事情，门槛仅仅只是认知。
+If you think this is difficult to understand, you can imagine the 80's stalls doing small business merchants, something, the threshold is just cognitive.
 
-## 量化工具应用于数字货币的优势
+## Advantages of quantitative tools applied to digital currencies
 
-数字货币交易市场秉承自有开源的理念。我们可以通过交易所的各种公开接口来获取各种想获得的数据。能获得多少数据，全看你自己的能力。
+The digital currency exchange market adheres to its own open source philosophy. We can access all kinds of data we want through the various public interfaces of the exchange. How much data you can get depends on your own ability.
 
-数字货币的24小时 不停交易机制，方便地球上的每一个人投资。换句话说，数字货币24小时产生的数据最少是股票市场的6倍。如果算上获取数据难度和数据的时间粒度的话，数字货币更加友好。比如数字货币可以轻松获取到100ms的全量20档orderbook数据，而股票一般人能获取的数据不过是3秒一次的trick数据。想拿到更加详细的10档L2数据就必须缴纳费用了 。想拿到高质量的数据，想不花钱，在A股市场，几乎不可能。而在数字货币市场，这一切都是免费。
+The 24-hour non-stop trading mechanism of digital currencies makes it convenient for everyone on earth to invest. In other words, the data generated by digital currencies in 24 hours is at least 6 times more than that of the stock market. Digital currencies are even more friendly if you count the difficulty of accessing the data and the time granularity of the data. For example, digital currencies can easily get 100ms of full 20-file orderbook data, whereas the average person in stocks can get no more than 3-second trick data. If you want to get more detailed 10-file L2 data, you have to pay a fee. Want to get high quality data, want to not spend money, in the A-share market, almost impossible. In the digital currency market, it's all free.
 
-## 利润来源在哪里
+## Where is the source of profit
 
-这个问题其实就是问自己，自己凭啥挣钱？ 
+This question is really about asking yourself, what do you make money on? 
 
-比如 为什么要参与数字货币？因为我们要获取财政放水的泡沫。随着财政放水，btc这种恒定数量的商品，价格必然随着通货膨胀而不断上涨。这也是我买入持有的基本逻辑。
+For example, why do you want to participate in digital currency? Because we want access to the bubble of fiscal deflation. With fiscal releases, the price of a constant quantity commodity like btc is bound to keep rising with inflation. This is the basic logic of my buy and hold.
 
-那么我的操作逻辑必然是，找到合适的买入时机，然后静静等待政府大放水。
+So my logic of operation must be, find the right time to buy, and then quietly wait for the government big water release.
 
-而股票呢？ 我不知道我别人强在哪里。所以我选择不参与。当然，如果你在股市参与多年，而且一直稳定获利，那么，股市还是可以积极参与的。
+And what about stocks? I don't know where I others are strong. So I choose not to participate. Of course, if you have been involved in the stock market for many years and have been making steady profits, then the stock market is still a good place to be active.
 
-2017年我明确的知道，在数字货币这件事情上，我犯了巨大的错误，这个错误就是在2009年知道了比特币却没有参与，2013年眼睁睁的看着1000人民币的比特币却认为参与已经太晚了。好在这一切都还来得及补救。
+In 2017 I know unequivocally that I made a huge mistake in the matter of digital currencies, and that mistake was knowing about Bitcoin in 2009 and not getting involved, and looking at 1,000 RMB of Bitcoin in 2013 and thinking it was too late to get involved. The good news is that it's not too late to fix it.
 
-## 结语
+## Conclusion
 
-在这个时间点，会量化的跟不会量化的人，将会变成两种不同思维的交易人群。
+At this point in time, those who will quantify and those who won't will become two different thinking trading populations.
 
-量化投资不是洪水猛兽，也不是黑色魔鬼，它只是一个工具，你用的好他就是印钞机，用的不好 就是碎钞机，我们需要考虑的问题是在一个交易市场上，我们如何获取自己的交易优势？
+Quantitative investment is not a beast, nor is it a black devil, it is just a tool, you use it well, he is a money printing machine, use it poorly, it is a money crushing machine, we need to consider the question is in a trading market, how do we get their own trading advantage?
 
-如果没有找到这个问题的答案 我觉得并不适合参与交易市场。
+If you haven't found the answer to this question, I don't think it's appropriate to participate in the trading market.
 
-如果你找到了，恭喜你，祝你在新的交易周期里面发财~~
+If you have found it, congratulations and good luck in the new trading cycle!
 
 ![](https://s2.loli.net/2023/09/06/KmE3Cy7dAqVQDOt.jpg)
 
