--- a/source/_posts/写在开头的话.md
+++ b/source/_posts/写在开头的话.md
@@ -1,48 +1,48 @@
 ---
-title: 写在开头的话
+title: Words at the beginning
 date: 2023-07-21 10:00:00
 categories:
-  - 量化交易
-tags:
-  - 量化交易
+  - Quantitative Trading
+tags: Quantitative trading
+  - Quantitative trading
   - python
-  - 资料库
-  - 策略
+  - Resources
+  - strategy
   - numpy
   - CTA
-description: '本文作为一个量化交易系列资料的开始,说明了整理这些资料的初心, 因为自己淋过雨,所以希望给后来者撑起一把伞.愿意为后来的爱好者们贡献一点微薄的力量'
+description: This article is the beginning of a series of quantitative trading materials, explaining the original intention of organizing these materials, because I have been in the rain, so I would like to give an umbrella to those who came after me. Willing to contribute a little bit to the later enthusiasts.
 cover: https://s2.loli.net/2023/07/21/se59R37ycQkUDwK.jpg
 ---
 
-## 缘起
+## Origin
 
-本文作为一个量化交易系列资料的开始, 简单讲两句吧.
+This article is the beginning of a series on quantitative trading, so let's talk about it briefly.
 
-当时我入门的时候一窍不通, 从手敲代码开始一点一点艰难进步. 那时候没有GPT,遇到不懂得问题,只能一遍一遍查Google和百度.常常现在回头来看很简单的问题,会耽误2-3天的时间,本来这些时间用来开发策略跟朋友交流应该会得到更多的提高罢.
+When I started, I didn't know anything about it, so I started from hand-knocking the code and progressed little by little. There was no GPT at that time, and when I encountered problems I could only check Google and Baidu over and over again. Often now look back at a very simple problem, will be delayed 2-3 days of time, this time should be used to develop strategies to communicate with friends should be more improved.
 
-只是想简单的把自己走过的坑. 进入的死胡同找个地方总结一下.让后来者真的踏入这些个坑里面了,能尽快出来.别犹豫! 
+I just want to simply put myself through the pit. Into the dead end into a place to summarize. So that those who really stepped into these pits, can get out as soon as possible. Don't hesitate! 
 
-只有挣到钱是王道!
+Only earn money is the king!
 
-如果这一系列的文章能为前进的你帮上哪怕一点小忙,找到一个不明白的问题的答案.也算作者为互联网贡献的一点微薄力量了.
+If this series of articles for the advancement of you to help even a little help, to find a do not understand the answer to the question. It is also the author's contribution to the Internet.
 
-## 内容
+## Content
 
-主要希望包含以下几个板块:
+I hope to include the following sections.
 
-1. 基础入门知识 虽然这个已经是一个被说烂了的题目,但是为了方便像我一样的弱鸡,还是加上这一块,但是不准备深究,准备搞一个10分钟快速入门之类的入门文章带过就好,毕竟这些专业文章太多了, 如果,10分钟入门的文章不适合你,觉得太简略,那么 各大编程网站上面拥有这方面的海量资源.还有相应的算法练习和题库.排版精致.用户友好,方便看官进一步深入进阶.
-2. 常用库的介绍. 毕竟python是一门胶水语言.他的强大很大程度上体现在它的库上面,所以相关的库准备开一条线,来介绍一下,主要准备介绍pandas, numpy, web3, ccxt, ehter这几个,当然常用的aiohttp系列异步库也会涉及.毕竟作为底层库这些基础支持是不可或缺的.
-3. 常用的低频策略, 比如著名的CTA方向的双均线策略, 布林线策略, 和海龟策略,震荡策略中的网格策略, 均仓策略, 中性策略中的合约套利策略. 等等,这些策略入门友好,实现简单, 可以快速入门
-4. 真正的大佬用的高频策略和事件策略, 这类策略往往可以从另一个维度看待问题. 在急速变化的行情中稳稳的获取收益.
-5. 某些另类的奇怪策略, 比如著名的小盘股策略,也能取得惊人的收益.这个作为开拓思路的文章会有提及
-6. 交易方面的新鲜论文和方向, 可以用来开拓思路.如何成为一个高手? 把市面上的策略都自己实现一遍就好了. 如果你能把一个新鲜的点子急速变成一个新鲜的策略,那么你的工程能力已经是大佬级别了.
+1. basic introductory knowledge Although this is already a topic that has been said rotten, but in order to facilitate the weak like me, or add this piece, but not ready to go deep, ready to get a 10-minute quick start or other introductory articles to bring through, after all, these professional articles are too much, if, 10-minute introductory articles are not suitable for you, think it is too abbreviated, then The major programming sites have this aspect of the above There are also algorithmic exercises and problems. There are also algorithmic exercises and problem banks. Layout is sophisticated. User-friendly and easy to use. 2.
+2. Introduction to common libraries. After all, python is a glue language. His power is largely reflected in its library above, so related libraries are ready to open a line to introduce, mainly ready to introduce pandas, numpy, web3, ccxt, ehter these, of course, the commonly used aiohttp series of asynchronous libraries will also be involved. After all, as the underlying libraries these basic support is indispensable. 3.
+3. commonly used low-frequency strategies, such as the famous CTA direction of the double average strategy, Bollinger Bands strategy, and the turtle strategy, oscillator strategy in the grid strategy, the average position strategy, neutral strategy in the contract arbitrage strategy. These strategies are user-friendly and easy to implement, so you can get started quickly!
+4. high frequency strategies and event strategies used by the real masters, these strategies can often be another dimension of the problem. These strategies are often used to get a different perspective on a problem, and to make steady gains in a rapidly changing market.
+5. Some strange alternative strategies, such as the famous small cap strategy, can also be very profitable. This will be mentioned as a thought starter article.
+6. new papers and directions in trading, which can be used to develop ideas. How to become a master? Just implement all the strategies on the market yourself. If you can take a fresh idea and turn it into a fresh strategy in a hurry, then your engineering skills are already at the level of the big boys.
 
-## 感悟
+## Lessons learned ##
 
-有时候,耽误我们前进的不只是前面的断壁残桥,还有鞋子中的小小沙石. 也会建立一个分类用来分享用来娱乐的短篇文章和搞笑图片,提供一个放松的场所.以及一些人生感悟,和认知文章, 只是提供另一个看待问题的视角, 希望能够帮助到你.
+Sometimes it's not just the broken bridge in front of us that holds us back, it's also the little gravel in our shoes. There will also be a category to share short articles and funny pictures for entertainment purposes and to provide a place to relax. As well as some life lessons, and cognitive articles, just to provide another perspective, I hope to be able to help you.
 
-## 结尾
+## Ending
 
-照例这里应该添加一点抒情的话. 多的也不说了,愿将来的你会感谢现在正在努力的你, 就这样吧.
+As usual, this is the place to add a few words. Without further ado, may the future thank you for what you're trying to do now, and that's that.
 
 ![向我们的目标驶去](https://s2.loli.net/2023/07/21/1VuSECQJY8BTetK.jpg)
